--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
         font-family: 'Poppins', sans-serif;
       }
     </style>
-    <title>Portofolio</title>
+    <title>Adise M.</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
